httptime/Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httptime-deployment
  labels:
    app: httptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httptime
  template:
    metadata:
      labels:
        app: httptime
    spec:
      containers:
      - name: httptime
        image: humansriot/httptime:latest
        args: ["-stdout"]
        ports:
        - containerPort: 8080
